...
                                        Icons.folder_open,
                                        color: COLOR_PRIMARY_LIGHT,
                                        size: 40.0,
                                      ),
                                      const SizedBox(height: 15),
                                      Text(
                                        'Select a thumbnail',
                                        style: TextStyle(
                                          fontSize: 15,
                                          color:
                                              COLOR_SECONDARY_GREY_LIGHT_DARKER,
                                        ),
                                      ),
...
                      Padding(
                        padding: const EdgeInsets.symmetric(vertical: 12),
                        child: TextFormField(
                          controller: _titleController,
                          decoration: const InputDecoration(
                            prefixIcon: Icon(Icons.title),
                            hintText: 'Title',
                          ),
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'Title is required';
                            }
                            return null;
...
                      Padding(
                        padding: const EdgeInsets.symmetric(vertical: 12),
                        child: TextFormField(
                          controller: _urlController,
                          decoration: const InputDecoration(
                            prefixIcon: Icon(Icons.link),
                            hintText: 'YouTube Video URL',
                          ),
                          validator: controller.validateUrl,
                        ),
                      ),
                    ],
                  ),
...
                            });
                          },
                          style: ElevatedButton.styleFrom(
                            backgroundColor: isPatientSelected ? Colors.red : null,
                          ),
                          child: Text(
                            'Patients',
                            style: TextStyle(
                              color: isPatientSelected ? Colors.white : null,
                            ),
                          ),
                        ),
                        const SizedBox(width: 5,),
...
                            });
                          },
                          style: ElevatedButton.styleFrom(
                            backgroundColor: isParentSelected ? Colors.red : null,
                          ),
                          child: Text(
                            'Parents',
                            style: TextStyle(
                              color: isParentSelected ? Colors.white : null,
                            ),
                          ),
                        ),
                        const SizedBox(width: 5,),
...
                          style: ElevatedButton.styleFrom(
                            backgroundColor: isHealthcareProfessionalSelected
                                ? Colors.red
                                : null,
                          ),
                          child: Text(
                            'Healthcare Professionals',
                            style: TextStyle(
                              color: isHealthcareProfessionalSelected
                                  ? Colors.white
                                  : null,
                            ),
                          ),
...
                        borderRadius: BorderRadius.circular(10.0),
                      ),
                    ),
                    child: const Padding(
                      padding: EdgeInsets.all(10.0),
                      child: Text(
                        'Start Webinar',
                        style: TextStyle(fontSize: 16, color: Colors.white),
                      ),
                    ),
                  ),

                  const SizedBox(height: 20),
...
                    padding: const EdgeInsets.only(bottom: 10),
                    child: ElevatedButton(
                      onPressed: _selectDateTime,
                      child: const Padding(
                        padding: EdgeInsets.all(10.0),
                        child: Text(
                          'Schedule Webinar',
                        ),
                      ),
                    ),
                  ),
                ],
              ),
...
