...
          Navigator.of(context).pop();
        }
      } else {
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
            content: Text(
                'A webinar with this URL may already exist. Please try again.'),
            duration: Duration(seconds: 3),
          ),
        );
      }
    }
  }
...
